Correct work of files i/o and log autoscroll

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,6 +76,7 @@
             android:scrollbars = "vertical"
             android:scrollHorizontally="true"
             android:marqueeRepeatLimit="marquee_forever"
+            android:gravity="bottom"
             android:textAppearance="?android:attr/textAppearanceSmall" />
     </LinearLayout>
 
