--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,49 +15,49 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="0.14"
-            android:text="C" />
+            android:text="@string/C" />
 
         <Button
             android:id="@+id/bt_d"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="0.14"
-            android:text="D" />
+            android:text="@string/D" />
 
         <Button
             android:id="@+id/bt_e"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="0.14"
-            android:text="E" />
+            android:text="@string/E" />
 
         <Button
             android:id="@+id/bt_f"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="0.14"
-            android:text="F" />
+            android:text="@string/F" />
 
         <Button
             android:id="@+id/bt_g"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="0.14"
-            android:text="G" />
+            android:text="@string/G" />
 
         <Button
             android:id="@+id/bt_a"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="0.14"
-            android:text="A" />
+            android:text="@string/A" />
 
         <Button
             android:id="@+id/bt_b"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="0.14"
-            android:text="B" />
+            android:text="@string/B" />
 
     </LinearLayout>
 
@@ -77,5 +77,4 @@
             android:singleLine="false"
             android:textAppearance="?android:attr/textAppearanceSmall" />
     </LinearLayout>
-
 </LinearLayout>
