--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,6 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:id="@+id/ll_buttons"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="0.5">
@@ -63,6 +62,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/ll_log"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="0.5">
